# py-fastApi

./: Dockerfile  README.md  pyproject.toml  pytest.ini  test.db
app/: main.py
app/core/: logger.py  util.py
app/core/exception/: custom_exception.py  error.py
app/core/middleware/: request_logger_middleware.py
app/db/: Dockerfile  database.py
app/model/: comment_entity.py  group_entity.py  post_entity.py  user_entity.py
app/router/: comment_router.py  group_router.py  post_router.py  routers.py  test_router.py  user_router.py
app/schema/: comment_schema.py  group_schema.py  post_schema.py  user_schema.py
app/service/: base_service.py  comment_service.py  group_service.py  post_service.py  test_service.py  user_service.py
test/router/: test_post_comment.py  test_user_router.py
