[tool.poetry]
name = "py-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
httpx = "^0.28.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
